--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "rustlings"]
 	path = rustlings
 	url = git@github.com:jhpetrichor/rustlings.git
+[submodule "learning-lm-rs"]
+	path = learning-lm-rs
+	url = git@github.com:jhpetrichor/learning-lm-rs.git
